[gd_scene load_steps=72 format=3 uid="uid://v8l885c1xsm5"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/chemical_laboratory.gd" id="1_b2cfh"]
[ext_resource type="Texture2D" uid="uid://djwgsl8qdi8h6" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/drink_holder_empty.png" id="2_ujlwc"]
[ext_resource type="Texture2D" uid="uid://b1yh636oam2rh" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/drink_holder_water_1.png" id="3_36t6l"]
[ext_resource type="Texture2D" uid="uid://d4iyf3lnxq1wn" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/drink_holder_mix_1.png" id="4_nlbyv"]
[ext_resource type="Texture2D" uid="uid://cfulhdsnb3fah" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/drink_holder_water_2.png" id="5_djt46"]
[ext_resource type="Texture2D" uid="uid://cbmbnaxkt46eo" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/drink_holder_mix_2.png" id="6_uxdrq"]
[ext_resource type="Texture2D" uid="uid://bq1xm3raio57n" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/drink_holder_water_3.png" id="7_65v5q"]
[ext_resource type="Texture2D" uid="uid://c5y5pjca633gs" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/drink_holder_mix_3.png" id="8_g4a82"]
[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/PowderMixing/drink_holder.gd" id="9_hvdtc"]
[ext_resource type="Texture2D" uid="uid://bnovic5wao87g" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/water_pitcher.png" id="10_0ugwe"]
[ext_resource type="AudioStream" uid="uid://cqqv5sjph5jnh" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakerpour_var1.mp3" id="10_gmevd"]
[ext_resource type="Texture2D" uid="uid://7fftkqwq8pwl" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/scale.png" id="10_tq6or"]
[ext_resource type="AudioStream" uid="uid://dd2mln4san8k3" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_powderpour_var1.mp3" id="11_5gyvt"]
[ext_resource type="FontFile" uid="uid://cndjys5rae2ut" path="res://Assets/Font/digital-7.ttf" id="11_g8n2i"]
[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/PowderMixing/water_cup.gd" id="11_jiefe"]
[ext_resource type="Texture2D" uid="uid://cp62gxaenms2k" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/water_pitcher_tilted_1.png" id="12_0tl5x"]
[ext_resource type="Texture2D" uid="uid://dfyjg6o1xhf1c" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_2.png" id="12_n7av0"]
[ext_resource type="Texture2D" uid="uid://cnpaqhf7wglea" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/water_pitcher_tilted_2.png" id="13_60s2y"]
[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/PowderMixing/pulver.gd" id="13_yairb"]
[ext_resource type="Texture2D" uid="uid://bktfrqapes445" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_3.png" id="14_n0lm2"]
[ext_resource type="Texture2D" uid="uid://ca1ttddbc5iu0" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/water_pitcher_tilted_3.png" id="14_qvnxd"]
[ext_resource type="Texture2D" uid="uid://bji7bvp2gh3q4" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_1.png" id="15_s57kk"]
[ext_resource type="Texture2D" uid="uid://n7l3pox5by56" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_empty.png" id="16_ac3qq"]
[ext_resource type="AudioStream" uid="uid://dlbqmb225i466" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakersetdown_var1.mp3" id="16_bgv0a"]
[ext_resource type="AudioStream" uid="uid://cf4emkal6ayqc" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakersetdown_var2.mp3" id="17_5wu6i"]
[ext_resource type="Texture2D" uid="uid://chrv505r1beht" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_2_tilted_2.png" id="17_pu5lw"]
[ext_resource type="Texture2D" uid="uid://chesqpjaa5e11" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_purple_1.png" id="17_ykirh"]
[ext_resource type="Texture2D" uid="uid://bre0kdhcyes0o" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_2_tilted_1.png" id="18_6ch4u"]
[ext_resource type="AudioStream" uid="uid://dxs6n623s8kuw" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakersetdown_var3.mp3" id="18_15po0"]
[ext_resource type="Texture2D" uid="uid://c1g8h77fdxeq1" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_purple_2.png" id="18_ydxxs"]
[ext_resource type="AudioStream" uid="uid://d3fqukof07fmk" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakersetdown_var4.mp3" id="19_7nm1j"]
[ext_resource type="Texture2D" uid="uid://cppvj6olibc7c" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_3_tilted_3.png" id="19_g3xv4"]
[ext_resource type="Texture2D" uid="uid://8602atlhoqm6" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_purple_3.png" id="19_hdagi"]
[ext_resource type="Texture2D" uid="uid://covs8nkmo65rj" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_2_tilted_3.png" id="19_x7pw1"]
[ext_resource type="Texture2D" uid="uid://q4s78ehuwgps" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_3_tilted_2.png" id="20_4um6f"]
[ext_resource type="AudioStream" uid="uid://c3uxb7jsi3av7" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakersetdown_var5.mp3" id="20_gnvqf"]
[ext_resource type="Texture2D" uid="uid://bur6vn7toyo4b" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_purple_4.png" id="20_l8u2w"]
[ext_resource type="Texture2D" uid="uid://ca666uxbmvp4w" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_1_tilted_3.png" id="20_sc6hd"]
[ext_resource type="Texture2D" uid="uid://byo7i7iafl1ji" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_red_1.png" id="21_3vbhw"]
[ext_resource type="Texture2D" uid="uid://5hgu0177hlko" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_1_tilted_1.png" id="21_7vbvh"]
[ext_resource type="Texture2D" uid="uid://dbf8ka5of85fg" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_3_tilted_1.png" id="21_kitia"]
[ext_resource type="Texture2D" uid="uid://dy7m3h423mt6d" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_red_2.png" id="22_0mkdw"]
[ext_resource type="Texture2D" uid="uid://il66iudrhbh4" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_1_tilted_2.png" id="22_0xw15"]
[ext_resource type="Texture2D" uid="uid://d01562voj2hp1" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_red_3.png" id="23_p5sn3"]
[ext_resource type="Texture2D" uid="uid://batyjaith7krl" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_red_4.png" id="24_wkruo"]
[ext_resource type="Texture2D" uid="uid://cfcy8h47gj22i" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_red_5.png" id="25_0482o"]
[ext_resource type="Texture2D" uid="uid://crbst52s2nri5" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_red_6.png" id="26_qjftv"]
[ext_resource type="Texture2D" uid="uid://c4q2pwnwtjv5n" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_yellow_1.png" id="27_tycnb"]
[ext_resource type="Texture2D" uid="uid://cvhjre4ahx4n8" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_yellow_2.png" id="28_lhjea"]
[ext_resource type="Texture2D" uid="uid://dguutvf3y6a2a" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_yellow_3.png" id="29_0hk8d"]
[ext_resource type="Texture2D" uid="uid://7gx1pjwrf130" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_yellow_4.png" id="30_qu5ct"]
[ext_resource type="Texture2D" uid="uid://c1mtjn0dvt5lk" path="res://Assets/Art/Environment/Rooms/Laboratory/Minigames/Powder Mixing/pulver_vessel_yellow_5.png" id="31_xnyqc"]
[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/PowderMixing/pulver_bowl.gd" id="32_ebx3t"]
[ext_resource type="PackedScene" uid="uid://hvla4dyxh56b" path="res://Scenes and Scripts/Dialog/Laboratory Dialog/Powder Dialog/powder_dialog_1.tscn" id="54_l6ekg"]

[sub_resource type="CanvasTexture" id="CanvasTexture_i7371"]
specular_color = Color(0.745098, 0.854902, 0.807843, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_mrjln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ujlwc")
}, {
"duration": 1.0,
"texture": ExtResource("3_36t6l")
}, {
"duration": 1.0,
"texture": ExtResource("4_nlbyv")
}, {
"duration": 1.0,
"texture": ExtResource("5_djt46")
}, {
"duration": 1.0,
"texture": ExtResource("6_uxdrq")
}, {
"duration": 1.0,
"texture": ExtResource("7_65v5q")
}, {
"duration": 1.0,
"texture": ExtResource("8_g4a82")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbfg1"]
size = Vector2(198, 392.377)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_828ff"]
size = Vector2(130.364, 381.248)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nk3i"]
size = Vector2(161.122, 402.933)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iqi52"]
size = Vector2(449.277, 368.11)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ogow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_ac3qq")
}, {
"duration": 1.0,
"texture": ExtResource("17_ykirh")
}, {
"duration": 1.0,
"texture": ExtResource("18_ydxxs")
}, {
"duration": 1.0,
"texture": ExtResource("19_hdagi")
}, {
"duration": 1.0,
"texture": ExtResource("20_l8u2w")
}, {
"duration": 1.0,
"texture": ExtResource("21_3vbhw")
}, {
"duration": 1.0,
"texture": ExtResource("22_0mkdw")
}, {
"duration": 1.0,
"texture": ExtResource("26_qjftv")
}, {
"duration": 1.0,
"texture": ExtResource("23_p5sn3")
}, {
"duration": 1.0,
"texture": ExtResource("25_0482o")
}, {
"duration": 1.0,
"texture": ExtResource("24_wkruo")
}, {
"duration": 1.0,
"texture": ExtResource("27_tycnb")
}, {
"duration": 1.0,
"texture": ExtResource("28_lhjea")
}, {
"duration": 1.0,
"texture": ExtResource("29_0hk8d")
}, {
"duration": 1.0,
"texture": ExtResource("30_qu5ct")
}, {
"duration": 1.0,
"texture": ExtResource("31_xnyqc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rewly"]
size = Vector2(399.288, 98.8885)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6cgod"]
streams_count = 5
stream_0/stream = ExtResource("16_bgv0a")
stream_0/weight = 1.0
stream_1/stream = ExtResource("17_5wu6i")
stream_1/weight = 1.0
stream_2/stream = ExtResource("18_15po0")
stream_2/weight = 1.0
stream_3/stream = ExtResource("19_7nm1j")
stream_3/weight = 1.0
stream_4/stream = ExtResource("20_gnvqf")
stream_4/weight = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xc7aw"]
size = Vector2(350, 293)

[sub_resource type="SpriteFrames" id="SpriteFrames_6dnwd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_n7av0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_pu5lw")
}, {
"duration": 1.0,
"texture": ExtResource("18_6ch4u")
}, {
"duration": 1.0,
"texture": ExtResource("19_x7pw1")
}, {
"duration": 1.0,
"texture": ExtResource("18_6ch4u")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5hvy"]
size = Vector2(369, 306)

[sub_resource type="SpriteFrames" id="SpriteFrames_c2ujo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_s57kk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_sc6hd")
}, {
"duration": 1.0,
"texture": ExtResource("21_7vbvh")
}, {
"duration": 1.0,
"texture": ExtResource("22_0xw15")
}, {
"duration": 1.0,
"texture": ExtResource("21_7vbvh")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcvw4"]
size = Vector2(355, 284)

[sub_resource type="SpriteFrames" id="SpriteFrames_mtd7m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_n0lm2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_g3xv4")
}, {
"duration": 1.0,
"texture": ExtResource("20_4um6f")
}, {
"duration": 1.0,
"texture": ExtResource("21_kitia")
}, {
"duration": 1.0,
"texture": ExtResource("20_4um6f")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqc8m"]
size = Vector2(367, 443)

[sub_resource type="SpriteFrames" id="SpriteFrames_owpuh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_0ugwe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_0tl5x")
}, {
"duration": 1.0,
"texture": ExtResource("13_60s2y")
}, {
"duration": 1.0,
"texture": ExtResource("14_qvnxd")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="ChemicalLaboratory" type="Node2D"]
script = ExtResource("1_b2cfh")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(0.745098, 0.854902, 0.807843, 1)
offset_left = -211.0
offset_top = -190.0
offset_right = 1945.0
offset_bottom = 1129.0
texture = SubResource("CanvasTexture_i7371")

[node name="DrinkHolder" type="AnimatedSprite2D" parent="."]
position = Vector2(1153, 454)
scale = Vector2(0.769601, 0.806024)
sprite_frames = SubResource("SpriteFrames_mrjln")
script = ExtResource("9_hvdtc")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="DrinkHolder"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrinkHolder/Area2D"]
position = Vector2(-167, -13.8118)
shape = SubResource("RectangleShape2D_fbfg1")

[node name="Area2D2" type="Area2D" parent="DrinkHolder"]
visible = false
collision_layer = 3
collision_mask = 3
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrinkHolder/Area2D2"]
position = Vector2(10.1818, -24.3761)
shape = SubResource("RectangleShape2D_828ff")

[node name="Area2D3" type="Area2D" parent="DrinkHolder"]
visible = false
collision_layer = 3
collision_mask = 3
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrinkHolder/Area2D3"]
position = Vector2(184.511, -26.5339)
shape = SubResource("RectangleShape2D_6nk3i")

[node name="Scale" type="Sprite2D" parent="."]
position = Vector2(628.545, 906.038)
scale = Vector2(0.754545, 0.741627)
texture = ExtResource("10_tq6or")

[node name="RichTextLabel" type="RichTextLabel" parent="Scale"]
anchors_preset = -1
anchor_left = -0.00972772
anchor_top = -0.0496557
anchor_right = 0.000642655
anchor_bottom = -0.0496557
offset_left = -31.4338
offset_top = 146.097
offset_right = 209.566
offset_bottom = 197.097
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_g8n2i")
theme_override_font_sizes/normal_font_size = 61
text = "Gewicht Hier
"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="Scale"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scale/Area2D"]
position = Vector2(1.26526, -166.576)
shape = SubResource("RectangleShape2D_iqi52")

[node name="PulverBowl" type="AnimatedSprite2D" parent="." groups=["PulverBowl"]]
position = Vector2(626.545, 849.038)
scale = Vector2(0.90411, 1.26405)
sprite_frames = SubResource("SpriteFrames_4ogow")
offset = Vector2(6.645, -72.3)
script = ExtResource("32_ebx3t")
metadata/_edit_group_ = true

[node name="PulverBowl" type="Area2D" parent="PulverBowl"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PulverBowl/PulverBowl"]
position = Vector2(9.40161, 10.6799)
shape = SubResource("RectangleShape2D_rewly")

[node name="Interact" type="AudioStreamPlayer" parent="PulverBowl"]
stream = SubResource("AudioStreamRandomizer_6cgod")
volume_db = -25.0
bus = &"SFX"

[node name="PouringWater" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_gmevd")
volume_db = -20.0

[node name="PulverPour" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_5gyvt")
volume_db = -20.0

[node name="DialogPowder1" parent="." instance=ExtResource("54_l6ekg")]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(567, 676)

[node name="RedPulver" type="Area2D" parent="."]
position = Vector2(1693.3, 906.181)
scale = Vector2(0.746537, 0.819444)
script = ExtResource("13_yairb")
color = "Red"
minimum_weight = 1.3
maximum_weight = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedPulver"]
position = Vector2(16, -2.5)
shape = SubResource("RectangleShape2D_xc7aw")

[node name="RedPulverSprite" type="AnimatedSprite2D" parent="RedPulver"]
sprite_frames = SubResource("SpriteFrames_6dnwd")
metadata/_edit_group_ = true

[node name="Interact" type="AudioStreamPlayer" parent="RedPulver/RedPulverSprite"]
stream = SubResource("AudioStreamRandomizer_6cgod")
volume_db = -25.0
bus = &"SFX"

[node name="PurplePulver" type="Area2D" parent="."]
position = Vector2(1702, 383.125)
scale = Vector2(0.69663, 0.74827)
script = ExtResource("13_yairb")
color = "Purple"
minimum_weight = 0.2
maximum_weight = 0.45

[node name="CollisionShape2D" type="CollisionShape2D" parent="PurplePulver"]
position = Vector2(3.5, -6)
shape = SubResource("RectangleShape2D_a5hvy")

[node name="PurplePulverSprite" type="AnimatedSprite2D" parent="PurplePulver"]
sprite_frames = SubResource("SpriteFrames_c2ujo")
metadata/_edit_group_ = true

[node name="Interact" type="AudioStreamPlayer" parent="PurplePulver/PurplePulverSprite"]
stream = SubResource("AudioStreamRandomizer_6cgod")
volume_db = -25.0
bus = &"SFX"

[node name="YellowPulver" type="Area2D" parent="."]
position = Vector2(1701, 624)
scale = Vector2(0.705128, 0.775261)
script = ExtResource("13_yairb")
color = "Yellow"
minimum_weight = 1.5
maximum_weight = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="YellowPulver"]
position = Vector2(3.5, 5)
shape = SubResource("RectangleShape2D_tcvw4")

[node name="YellowPulverSprite" type="AnimatedSprite2D" parent="YellowPulver"]
sprite_frames = SubResource("SpriteFrames_mtd7m")
metadata/_edit_group_ = true

[node name="Interact" type="AudioStreamPlayer" parent="YellowPulver/YellowPulverSprite"]
stream = SubResource("AudioStreamRandomizer_6cgod")
volume_db = -25.0
bus = &"SFX"

[node name="WaterCup" type="Area2D" parent="."]
position = Vector2(277, 331)
scale = Vector2(0.667183, 0.735443)
collision_layer = 2
collision_mask = 2
script = ExtResource("11_jiefe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCup"]
position = Vector2(-4.5, -0.5)
shape = SubResource("RectangleShape2D_rqc8m")

[node name="WaterCup" type="AnimatedSprite2D" parent="WaterCup"]
position = Vector2(-4.49658, 8.15836)
sprite_frames = SubResource("SpriteFrames_owpuh")
offset = Vector2(2.205, -2.975)
metadata/_edit_group_ = true

[node name="Interact" type="AudioStreamPlayer" parent="WaterCup/WaterCup"]
stream = SubResource("AudioStreamRandomizer_6cgod")
volume_db = -25.0
bus = &"SFX"

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(858, 257)
scale = Vector2(0.769601, 0.806024)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(1007, 283)
scale = Vector2(0.769601, 0.806024)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(1126, 238)
scale = Vector2(0.769601, 0.806024)

[connection signal="area_entered" from="DrinkHolder/Area2D" to="DrinkHolder" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="DrinkHolder/Area2D" to="DrinkHolder" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="DrinkHolder/Area2D2" to="DrinkHolder" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="DrinkHolder/Area2D2" to="DrinkHolder" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="DrinkHolder/Area2D3" to="DrinkHolder" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="DrinkHolder/Area2D3" to="DrinkHolder" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Scale/Area2D" to="PulverBowl" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Scale/Area2D" to="PulverBowl" method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="PulverBowl/PulverBowl" to="PulverBowl" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="PulverBowl/PulverBowl" to="PulverBowl" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="RedPulver" to="RedPulver" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RedPulver" to="RedPulver" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PurplePulver" to="PurplePulver" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PurplePulver" to="PurplePulver" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="YellowPulver" to="YellowPulver" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="YellowPulver" to="YellowPulver" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="WaterCup" to="WaterCup" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="WaterCup" to="WaterCup" method="_on_mouse_exited"]
